# spiking-patches

./: .gitignore  CITATION.cff  Cargo.toml  README.md  evaluate.py  install.sh  preprocess.py  pyproject.toml  train.py
sp/: aggregators.py  collators.py  configs.py  constants.py  data_types.py  dvs_gesture.py  etram.py  evaluators.py  events.py  gen1.py  io.py  loaders.py  one_mpx.py  paths.py  sl_animals_dvs.py  timers.py  tokenizer.py
sp/aedat/: __init__.py  reader.py  v2_0.py  v3_1.py
sp/augmentations/: __init__.py  augmentation.py  chance.py  compose.py  cut_mix.py  drop_by_area.py  drop_by_time.py  drop_event.py  horizontal_flip.py  horizontal_shear.py  identity.py  one_of.py  rolling.py  rotation.py
sp/data/: __init__.py
sp/data/dvs_gesture/: datamodule.py  dataset.py
sp/data/object_detection/: datamodule.py  dataset_base.py  dataset_random.py  dataset_streaming.py
sp/data/sl_animals_dvs/: datamodule.py  dataset.py
sp/models/: classification.py  object_detection.py
sp/nn/: __init__.py  embeddings.py  gnn_classifier.py  gnn_detector.py  object_detector.py  pcn_classifier.py  pcn_detector.py  transformer_classifier.py  transformer_detector.py
sp/preprocessing/: dvs_gesture.py  events.py  loaders.py  object_detection.py  sl_animals_dvs.py
sp/prophesee/: __init__.py  box_filtering.py  coco_eval.py  dat_events_tools.py  evaluation.py  loader.py  npy_events_tools.py
sp/representations/: frame.py  volume.py
sp/visualisations/: objects.py  polarity_image.py  polarity_video.py  tokens_video.py
sp/yolox/: blocks.py  head.py  losses.py  neck.py  utils.py
src/: continuous_spiking_patch.rs  continuous_tokenizer.rs  discrete_spiking_patch.rs  discrete_tokenizer.rs  event.rs  lib.rs  token.rs  voxel_tokenizer.rs
