[project]
description = "Spiking Patches: Asynchronous, Sparse, and Efficient Tokens for Event Cameras"
name = "sp"
readme = "README.md"
requires-python = ">=3.12"
version = "1.0.0"

dependencies = [
  "dataclasses-json>=0.6.4",
  "ffmpeg-python>=0.2.0",
  "h5py>=3.11.0",
  "lightning[extra]~=2.5.0",
  "matplotlib>=3.8.3",
  "maturin>=1.7.0",
  "numpy>=1.26.4",
  "nvitop>=1.3.2",
  "opencv-python>=4.9.0.80",
  "pandas>=2.2.1",
  "pillow>=10.2.0",
  "pycocotools>=2.0.7",
  "pytest>=8.1.1",
  "scikit-learn>=1.4.1.post1",
  "tensorboard>=2.16.2",
  "torch~=2.7.0",
  "torch-tb-profiler>=0.4.3",
  "torchmetrics>=1.3.1",
  "torchvision>=0.19.1",
  "tqdm>=4.66.2",
  "transformers>=4.39.1",
  "wandb>=0.18.0",
  "ipykernel>=6.29.2",
  "ipympl>=0.9.3",
  "tyro>=0.9.26",
  "torch-geometric>=2.6.1",
  "ruff>=0.12.7",
  "hdf5plugin>=5.1.0",
  "imageio>=2.37.0",
  "numba>=0.61.2",
  "pyarrow>=21.0.0",
  "fastparquet>=2024.11.0",
]

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.8.6"]

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".ruff_cache",
  ".pytest_cache",
  "dist",
  ".vscode",
  "poetry.lock",
  ".venv",
  "wandb",
  "src",
]

indent-width = 4
line-length = 120
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
ignore = [
  # The rule below may conflict with the formatter and is disabled for that reason.
  "ISC001", # we want to enforce explicit string concatenation,
  # so we disable this rule that would otherwise enforce implicit concatenation
  "ISC003",
]
select = [
  "B", # flake8-bugbear
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort
  "ISC", # flake8-implicit-str-concat (used to disallow implicit string concatenation)
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["spiking_patches"]
known-third-party = ["wandb"]

[tool.ruff.lint.flake8-implicit-str-concat]
allow-multiline = true
